# smart-life-app/app/api.yml
@@ -361,7 +361,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SetInput'
+              $ref: '#/components/schemas/SetUpdate'
       responses:
         '200':
           description: Working weight variations updated.
@@ -563,6 +563,40 @@ components:
         is_warmup:
           type: boolean
           default: false
+          example: false
+
+    SetUpdate:
+      type: object
+      properties:
+        workout_session_id:
+          type: integer
+          example: 105
+        exercise_id:
+          type: integer
+          example: 14
+        weight:
+          type: number
+          format: float
+          minimum: 0.00
+          example: 42.50
+        reps:
+          type: integer
+          minimum: 1
+          example: 10
+        rpe:
+          type: integer
+          minimum: 1
+          maximum: 10
+          nullable: true
+          example: 9
+        pr:
+          type: number
+          format: float
+          minimum: 0.00
+          nullable: true
+          example: 42.50
+        is_warmup:
+          type: boolean
           example: false
 
     BodyMetricInput:
